--- a/src/cinema/contact.fxml
+++ b/src/cinema/contact.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="604.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.ContactController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.ContactController">
    <children>
       <ImageView fitHeight="124.0" fitWidth="90.0" layoutX="362.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -19,17 +19,40 @@
             <Image url="@../images/nutflixlogo.png" />
          </image>
       </ImageView>
-      <Label layoutX="93.0" layoutY="213.0" text="Staff Name: Krittin Kanokwilairat  5910450026" textFill="#e42525">
+      <Label layoutX="93.0" layoutY="213.0" text="Staff Name: Krittin Kanokwilairat  5910450026  lab section 200 lecture section 200" textFill="#e42525">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="93.0" layoutY="237.0" prefHeight="17.0" prefWidth="213.0" text="NUTFLIX" textFill="#da0f0f" />
-      <Label layoutX="158.0" layoutY="237.0" text="JUST WATCH IT" textFill="#da0f0f" />
-      <Label layoutX="92.0" layoutY="264.0" text="Application for booking seat in cinemain home page you can choose movie" textFill="#da0f0f" wrapText="true" />
-      <Label layoutX="90.0" layoutY="290.0" text="How to get Ticket? choose movie click BUY NOW choose Thretre and click showtime " textFill="#da0f0f" />
-      <Label layoutX="89.0" layoutY="314.0" text="then choose seat number,type book . How to run Project follow instruction below" textFill="#da0f0f" />
-      <Label layoutX="89.0" layoutY="339.0" text="java -jar and drag .jar file in then click enter." textFill="#da0f0f" />
-      <Button fx:id="gohomecontactBtn" layoutX="221.0" layoutY="375.0" mnemonicParsing="false" onAction="#goHomeFromContact" onMouseClicked="#goHomeFromContact" style="-fx-background-color: black; -fx-border-color: red;" text="Home" textFill="#e10808" />
+      <Label layoutX="93.0" layoutY="237.0" prefHeight="17.0" prefWidth="213.0" text="NUTFLIX" textFill="#da0f0f">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="182.0" layoutY="237.0" text="JUST WATCH IT" textFill="#da0f0f">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="85.0" layoutY="287.0" text="Application for booking seat in cinemain home page you can choose movie" textFill="#da0f0f" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="85.0" layoutY="327.0" text="How to get Ticket? choose movie click BUY NOW choose Thretre and click showtime " textFill="#da0f0f">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="85.0" layoutY="369.0" text="then choose seat number,type book . How to run Project follow instruction below" textFill="#da0f0f">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label layoutX="92.0" layoutY="389.0" prefHeight="45.0" prefWidth="373.0" text="java -jar and drag .jar file in then click enter." textFill="#da0f0f">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="gohomecontactBtn" layoutX="553.0" layoutY="490.0" mnemonicParsing="false" onAction="#goHomeFromContact" onMouseClicked="#goHomeFromContact" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: black; -fx-border-color: red; -fx-border-radius: 100;" text="Home" textFill="#e10808" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="785.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/teety.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
