--- a/src/cinema/homepage.fxml
+++ b/src/cinema/homepage.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1029.0" prefWidth="1242.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.HomePageController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.HomePageController">
    <children>
-      <Pane layoutX="-2.0" layoutY="-2.0" prefHeight="100.0" prefWidth="1249.0" style="-fx-background-color: black;">
+      <Pane layoutX="-2.0" layoutY="-2.0" prefHeight="100.0" prefWidth="1027.0" style="-fx-background-color: black;">
          <children>
             <Label layoutX="133.0" layoutY="14.0" prefHeight="8.0" prefWidth="80.0" text="showtime" textFill="#e3fc05">
                <font>
@@ -28,7 +28,7 @@
                   <Font name="System Bold" size="14.0" />
                </font></Label>
             <Label layoutX="345.0" layoutY="42.0" text="\@" textFill="#f2eeee" />
-            <Button layoutX="504.0" layoutY="37.0" mnemonicParsing="false" style="-fx-background-color: red;" text="showtime" textFill="#f5e7e7">
+            <Button layoutX="504.0" layoutY="37.0" mnemonicParsing="false" style="-fx-background-color: red; -fx-background-radius: 100;" text="showtime" textFill="#f5e7e7">
                <font>
                   <Font name="Arial Bold" size="14.0" />
                </font></Button>
@@ -65,11 +65,21 @@
                   <Font name="Tahoma" size="13.0" />
                </font>
             </Label>
-            <Button fx:id="contactBtn" layoutX="1053.0" layoutY="38.0" mnemonicParsing="false" onAction="#goContact" onMouseClicked="#goContact" style="-fx-background-color: red;" text="Contact" textFill="#f5e7e7">
+            <Button fx:id="contactBtn" layoutX="835.0" layoutY="38.0" mnemonicParsing="false" onAction="#goContact" onMouseClicked="#goContact" style="-fx-background-color: red; -fx-background-radius: 100;" text="Contact" textFill="#f5e7e7">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
+            <Button layoutX="920.0" layoutY="37.0" mnemonicParsing="false" onAction="#LogOut" onMouseClicked="#LogOut" style="-fx-background-color: black; -fx-border-color: red; -fx-border-radius: 100;" text="Sign out" textFill="#f50707">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Label fx:id="userInfo" layoutX="735.0" layoutY="42.0" text="user info" textFill="#cdf80e">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <ImageView fitHeight="254.0" fitWidth="200.0" layoutX="27.0" layoutY="118.0" pickOnBounds="true" preserveRatio="true">
@@ -124,31 +134,18 @@
             <Image url="@../images/thumb_2595.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="265.0" fitWidth="228.0" layoutX="989.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/thumb_2681.jpg" />
-         </image>
-      </ImageView>
       <Button layoutX="609.0" layoutY="381.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: red;" text="BUY NOW" textFill="#f5f3f3" />
       <Button layoutX="801.0" layoutY="381.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="178.0" style="-fx-background-color: red;" text="BUY NOW" textFill="#f5f3f3" />
-      <Button layoutX="989.0" layoutY="381.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: red;" text="BUY NOW" textFill="#f5f3f3" />
       <Label layoutX="679.0" layoutY="413.0" text="Cats" textFill="#eee8e8" />
       <Label layoutX="801.0" layoutY="413.0" prefHeight="17.0" prefWidth="142.0" text="Fast And Furious Hobbs and Shaw" textFill="#eee8e8" />
-      <Label layoutX="1019.0" layoutY="413.0" text="47 Meters Down Uncaged" textFill="#eee8e8" />
       <Label layoutX="662.0" layoutY="430.0" text="ก๊วนเหมียวหง่าว" textFill="#d5ff04" />
       <Label layoutX="801.0" layoutY="430.0" text="เร็ว แรงทะลุนรกฮ็อบส์ แอนด์ ชอว์" textFill="#d5ff04" />
-      <Label layoutX="1038.0" layoutY="430.0" text="47 ดิ่งลึกสุดนรก" textFill="#d5ff04" />
       <Label layoutX="661.0" layoutY="447.0" prefHeight="27.0" prefWidth="74.0" text="5/9/19" textFill="#1df22f">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
       <Label layoutX="835.0" layoutY="447.0" prefHeight="27.0" prefWidth="74.0" text="31/7/19" textFill="#1df22f">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="1038.0" layoutY="447.0" prefHeight="27.0" prefWidth="74.0" text="22/8/19" textFill="#1df22f">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
