--- a/src/cinema/movie2.fxml
+++ b/src/cinema/movie2.fxml
@@ -8,31 +8,30 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="700.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Movie2Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Movie2Controller">
     <children>
-        <Line endX="591.0" layoutX="101.0" layoutY="44.0" startX="-101.0" stroke="#f50303" />
-        <Line endX="92.5" endY="-23.414215087890625" layoutX="120.0" layoutY="43.0" startX="64.5" startY="-43.0" stroke="#f20808" />
-        <Line endX="-60.79290771484375" endY="-24.707115173339844" layoutX="274.0" layoutY="45.0" startX="-87.5" stroke="#f80303" />
-        <Line endX="99.5" endY="-19.0" layoutX="352.0" layoutY="37.0" startX="64.5" startY="-43.0" stroke="#f20808" />
-        <Line endX="-70.79290771484375" endY="-21.292892456054688" layoutX="523.0" layoutY="40.0" startX="-94.5" startY="4.5" stroke="#f80303" />
+        <Line endX="919.0" endY="-7.62939453125E-6" layoutX="101.0" layoutY="44.0" startX="-101.0" stroke="#f50303" />
+        <Line endX="92.5" endY="-23.414215087890625" layoutX="185.0" layoutY="45.0" startX="64.5" startY="-43.0" stroke="#f20808" />
+        <Line endX="-60.79290771484375" endY="-24.707115173339844" layoutX="338.0" layoutY="47.0" startX="-87.5" stroke="#f80303" />
+        <Line endX="93.20709228515625" endY="-20.70709991455078" layoutX="552.0" layoutY="44.0" startX="64.5" startY="-43.0" stroke="#f20808" />
+        <Line endX="-67.5" endY="-17.0" layoutX="712.0" layoutY="41.0" startX="-94.5" startY="4.5" stroke="#f80303" />
         <Label layoutX="43.0" layoutY="12.0" text="Choose Threatre" textFill="#fc0808">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="243.0" layoutY="12.0" text="Choose Seat" textFill="#f20303">
+        <Label layoutX="391.0" layoutY="10.0" text="Choose Seat" textFill="#f20303">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="472.0" layoutY="12.0" text="Book/Payment" textFill="#eb0505">
+        <Label layoutX="755.0" layoutY="12.0" text="Book/Payment" textFill="#eb0505">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Pane layoutY="45.0" opacity="0.76" prefHeight="591.0" prefWidth="145.0" style="-fx-background-color: grey;">
+        <Pane layoutY="45.0" opacity="0.76" prefHeight="535.0" prefWidth="145.0" style="-fx-background-color: grey;">
             <children>
-                <Line endX="591.0" endY="-1.52587890625E-5" layoutX="101.0" layoutY="196.0" startX="-100.0" stroke="#f50303" />
                 <Label layoutX="14.0" layoutY="14.0" text="Threatre 3">
                     <font>
                         <Font name="System Bold" size="24.0" />
@@ -43,50 +42,49 @@
                         <Font name="System Bold" size="64.0" />
                     </font>
                 </Label>
-                <Label layoutX="14.0" layoutY="206.0" text="Threatre 2">
+                <Label layoutX="14.0" layoutY="188.0" text="Threatre 2">
                     <font>
                         <Font name="System Bold" size="24.0" />
                     </font>
                 </Label>
-                <Label layoutX="14.0" layoutY="381.0" text="Threatre 4">
+                <Label layoutX="14.0" layoutY="356.0" text="Threatre 4">
                     <font>
                         <Font name="System Bold" size="24.0" />
                     </font>
                 </Label>
-                <Label layoutX="94.0" layoutY="223.0" text="2">
+                <Label layoutX="94.0" layoutY="206.0" text="2">
                     <font>
                         <Font name="System Bold" size="64.0" />
                     </font>
                 </Label>
-                <Label layoutX="94.0" layoutY="391.0" text="4">
+                <Label layoutX="94.0" layoutY="366.0" text="4">
                     <font>
                         <Font name="System Bold" size="64.0" />
                     </font>
                 </Label>
-                <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="56.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="63.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../images/4k-uhd-logo.png" />
                     </image>
                 </ImageView>
-                <ImageView fitHeight="48.0" fitWidth="66.0" layoutX="62.0" layoutY="524.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="48.0" fitWidth="66.0" layoutX="69.0" layoutY="459.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../images/theatre-toyota-imax.png" />
                     </image>
                 </ImageView>
-            <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="57.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="63.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/4k-uhd-logo.png" />
                </image>
             </ImageView>
             </children>
         </Pane>
-        <Line endX="607.2929077148438" layoutX="93.0" layoutY="416.0" startX="-100.0" stroke="#f50303" />
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2720.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="306.0" layoutY="72.0" text="Weathering with You" textFill="#ebe7e7">
+        <Label layoutX="300.0" layoutY="59.0" text="Weathering with You" textFill="#ebe7e7">
             <font>
                 <Font size="18.0" />
             </font>
@@ -96,96 +94,98 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <Button fx:id="movie2threatre3Time1" layoutX="312.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time1" onMouseClicked="#goThreatre3FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="11:30" textFill="#ff0505" />
-        <Button fx:id="movie2threatre3Time2" layoutX="368.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time2" onMouseClicked="#goThreatre3FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="14:00" textFill="#f80a0a" />
-        <Button fx:id="movie2threatre3Time3" layoutX="429.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time3" onMouseClicked="#goThreatre3FromMovie1Time3" style="-fx-background-color: black; -fx-border-color: red;" text="16:30" textFill="#f50707" />
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="301.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+        <Button fx:id="movie2threatre3Time1" layoutX="312.0" layoutY="166.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time1" onMouseClicked="#goThreatre3FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="11:30" textFill="#ff0505" />
+        <Button fx:id="movie2threatre3Time2" layoutX="366.0" layoutY="166.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time2" onMouseClicked="#goThreatre3FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="14:00" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre3Time3" layoutX="429.0" layoutY="166.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time3" onMouseClicked="#goThreatre3FromMovie1Time3" style="-fx-background-color: black; -fx-border-color: red;" text="16:30" textFill="#f50707" />
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="311.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_2.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="358.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/4dx.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="402.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/Screen%20Shot%202562-09-06%20at%2015.46.44.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="163.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2720.jpg" />
             </image>
         </ImageView>
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="424.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="407.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2720.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="306.0" layoutY="252.0" text="Weathering with You" textFill="#ebe7e7">
+        <Label layoutX="306.0" layoutY="232.0" text="Weathering with You" textFill="#ebe7e7">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="306.0" layoutY="433.0" text="Weathering with You" textFill="#ebe7e7">
+        <Label layoutX="306.0" layoutY="407.0" text="Weathering with You" textFill="#ebe7e7">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="306.0" layoutY="297.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
+        <Label layoutX="306.0" layoutY="259.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="306.0" layoutY="112.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
+        <Label layoutX="306.0" layoutY="86.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="301.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="311.0" layoutY="287.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_2.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="358.0" layoutY="287.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/4dx.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="402.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/Screen%20Shot%202562-09-06%20at%2015.46.44.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="298.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="311.0" layoutY="462.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_2.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="358.0" layoutY="462.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/imax-3d.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="402.0" layoutY="463.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/Screen%20Shot%202562-09-06%20at%2015.46.44.png" />
             </image>
         </ImageView>
-        <Button fx:id="movie2threatre2Time1" layoutX="306.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time1" onMouseClicked="#goThreatre2FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="12:30" textFill="#ff0505" />
-        <Button fx:id="movie2threatre4Time1" layoutX="306.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre4FromMovie2Time1" onMouseClicked="#goThreatre4FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="15:30" textFill="#ff0505" />
-        <Button fx:id="movie2threatre2Time2" layoutX="368.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time2" onMouseClicked="#goThreatre2FromMovie2Time2" style="-fx-background-color: black; -fx-border-color: red;" text="15:30" textFill="#f80a0a" />
-        <Button fx:id="movie2threatre2Time3" layoutX="429.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time3" onMouseClicked="#goThreatre2FromMovie2Time3" style="-fx-background-color: black; -fx-border-color: red;" text="18:00" textFill="#f80a0a" />
-        <Button fx:id="movie2threatre4Time2" layoutX="368.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre4FromMovie2Time2" onMouseClicked="#goThreatre4FromMovie2Time2" style="-fx-background-color: black; -fx-border-color: red;" text="20:30" textFill="#f80a0a" />
-        <Button fx:id="movie2threatre3Time4" layoutX="487.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time3" onMouseClicked="#goThreatre3FromMovie1Time3" style="-fx-background-color: black; -fx-border-color: red;" text="19:00" textFill="#f80a0a" />
-        <Button fx:id="detailmovie2Btn" layoutX="616.0" layoutY="60.0" mnemonicParsing="false" onAction="#goMovieDetail1FromMovie2" onMouseClicked="#goMovieDetail1FromMovie2" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
-      <Label layoutX="306.0" layoutY="472.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
+        <Button fx:id="movie2threatre2Time1" layoutX="312.0" layoutY="326.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time1" onMouseClicked="#goThreatre2FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="12:30" textFill="#ff0505" />
+        <Button fx:id="movie2threatre4Time1" layoutX="312.0" layoutY="499.0" mnemonicParsing="false" onAction="#goThreatre4FromMovie2Time1" onMouseClicked="#goThreatre4FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="15:30" textFill="#ff0505" />
+        <Button fx:id="movie2threatre2Time2" layoutX="372.0" layoutY="326.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time2" onMouseClicked="#goThreatre2FromMovie2Time2" style="-fx-background-color: black; -fx-border-color: red;" text="15:30" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre2Time3" layoutX="429.0" layoutY="326.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time3" onMouseClicked="#goThreatre2FromMovie2Time3" style="-fx-background-color: black; -fx-border-color: red;" text="18:00" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre4Time2" layoutX="372.0" layoutY="499.0" mnemonicParsing="false" onAction="#goThreatre4FromMovie2Time2" onMouseClicked="#goThreatre4FromMovie2Time2" style="-fx-background-color: black; -fx-border-color: red;" text="20:30" textFill="#f80a0a" />
+        <Button fx:id="movie2threatre3Time4" layoutX="487.0" layoutY="166.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time3" onMouseClicked="#goThreatre3FromMovie1Time3" style="-fx-background-color: black; -fx-border-color: red;" text="19:00" textFill="#f80a0a" />
+        <Button fx:id="detailmovie2Btn" layoutX="946.0" layoutY="60.0" mnemonicParsing="false" onAction="#goMovieDetail1FromMovie2" onMouseClicked="#goMovieDetail1FromMovie2" style="-fx-background-color: red; -fx-background-radius: 100;" text="Detail" textFill="#fffbfb" />
+      <Label layoutX="306.0" layoutY="434.0" text="ฤดูฝัน ฉันมีเธอ แอนิเมชัน , แฟนตาซี , โรแมนติก  111 นาที" textFill="#fcfafa">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="movie2homeBtn" layoutX="404.0" layoutY="595.0" mnemonicParsing="false" onAction="#goHomeFromMovie1" onMouseClicked="#goHomeFromMovie1" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
+      <Button fx:id="movie2homeBtn" layoutX="945.0" layoutY="526.0" mnemonicParsing="false" onAction="#goHomeFromMovie1" onMouseClicked="#goHomeFromMovie1" style="-fx-background-color: red; -fx-background-radius: 100;" text="Home" textFill="#fffbfb" />
+          <Line endX="913.0" layoutX="107.0" layoutY="222.0" startX="-107.0" stroke="#f50303" />
+      <Line endX="913.0" layoutX="108.0" layoutY="394.0" startX="-107.0" stroke="#f50303" />
     </children>
 </Pane>
