--- a/src/cinema/movie3.fxml
+++ b/src/cinema/movie3.fxml
@@ -8,31 +8,30 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="700.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Movie3Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Movie3Controller">
     <children>
-        <Line endX="591.0" layoutX="101.0" layoutY="44.0" startX="-101.0" stroke="#f50303" />
-        <Line endX="92.5" endY="-23.414215087890625" layoutX="120.0" layoutY="43.0" startX="64.5" startY="-43.0" stroke="#f20808" />
-        <Line endX="-60.79290771484375" endY="-24.707115173339844" layoutX="274.0" layoutY="45.0" startX="-87.5" stroke="#f80303" />
-        <Line endX="99.5" endY="-19.0" layoutX="352.0" layoutY="37.0" startX="64.5" startY="-43.0" stroke="#f20808" />
-        <Line endX="-70.79290771484375" endY="-21.292892456054688" layoutX="523.0" layoutY="40.0" startX="-94.5" startY="4.5" stroke="#f80303" />
+        <Line endX="928.5" layoutX="101.0" layoutY="44.0" startX="-101.0" stroke="#f50303" />
+        <Line endX="92.5" endY="-23.414215087890625" layoutX="185.0" layoutY="43.0" startX="64.5" startY="-43.0" stroke="#f20808" />
+        <Line endX="-60.79290771484375" endY="-24.707115173339844" layoutX="342.0" layoutY="44.0" startX="-87.5" stroke="#f80303" />
+        <Line endX="99.5" endY="-19.0" layoutX="459.0" layoutY="41.0" startX="64.5" startY="-43.0" stroke="#f20808" />
+        <Line endX="-70.79290771484375" endY="-21.292892456054688" layoutX="628.0" layoutY="41.0" startX="-94.5" startY="4.5" stroke="#f80303" />
         <Label layoutX="43.0" layoutY="12.0" text="Choose Threatre" textFill="#fc0808">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="243.0" layoutY="12.0" text="Choose Seat" textFill="#f20303">
+        <Label layoutX="345.0" layoutY="13.0" text="Choose Seat" textFill="#f20303">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="472.0" layoutY="12.0" text="Book/Payment" textFill="#eb0505">
+        <Label layoutX="737.0" layoutY="12.0" text="Book/Payment" textFill="#eb0505">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Pane layoutY="45.0" opacity="0.76" prefHeight="591.0" prefWidth="145.0" style="-fx-background-color: grey;">
+        <Pane layoutY="45.0" opacity="0.76" prefHeight="534.0" prefWidth="145.0" style="-fx-background-color: grey;">
             <children>
-                <Line endX="591.0" endY="-1.52587890625E-5" layoutX="101.0" layoutY="196.0" startX="-100.0" stroke="#f50303" />
                 <Label layoutX="14.0" layoutY="14.0" text="Threatre 1">
                     <font>
                         <Font name="System Bold" size="24.0" />
@@ -43,135 +42,136 @@
                         <Font name="System Bold" size="64.0" />
                     </font>
                 </Label>
-                <Label layoutX="14.0" layoutY="206.0" text="Threatre 2">
+                <Label layoutX="14.0" layoutY="188.0" text="Threatre 2">
                     <font>
                         <Font name="System Bold" size="24.0" />
                     </font>
                 </Label>
-                <Label layoutX="14.0" layoutY="381.0" text="Threatre 3">
+                <Label layoutX="14.0" layoutY="356.0" text="Threatre 3">
                     <font>
                         <Font name="System Bold" size="24.0" />
                     </font>
                 </Label>
-                <Label layoutX="94.0" layoutY="223.0" text="2">
+                <Label layoutX="94.0" layoutY="206.0" text="2">
                     <font>
                         <Font name="System Bold" size="64.0" />
                     </font>
                 </Label>
-                <Label layoutX="94.0" layoutY="391.0" text="3">
+                <Label layoutX="94.0" layoutY="369.0" text="3">
                     <font>
                         <Font name="System Bold" size="64.0" />
                     </font>
                 </Label>
-                <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="56.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="68.0" layoutY="289.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../images/4k-uhd-logo.png" />
                     </image>
                 </ImageView>
-            <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="56.0" layoutY="528.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="49.0" fitWidth="77.0" layoutX="68.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/4k-uhd-logo.png" />
                </image>
             </ImageView>
             </children>
         </Pane>
-        <Line endX="607.2929077148438" layoutX="93.0" layoutY="416.0" startX="-100.0" stroke="#f50303" />
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+        <Line endX="924.0" layoutX="98.0" layoutY="394.0" startX="-100.0" stroke="#f50303" />
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2655.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="306.0" layoutY="72.0" text="Angel Has Fallen" textFill="#ebe7e7">
+        <Label layoutX="302.0" layoutY="58.0" text="Angel Has Fallen" textFill="#ebe7e7">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="299.0" layoutY="472.0" text="ผ่ายุทธการ ดับแผนอหังการ์ แอ็คชัน , ชีวิต , ระทึกขวัญ  120 นาที" textFill="#fcfafa">
+        <Label layoutX="299.0" layoutY="434.0" text="ผ่ายุทธการ ดับแผนอหังการ์ แอ็คชัน , ชีวิต , ระทึกขวัญ  120 นาที" textFill="#fcfafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Button fx:id="movie3threatre1time1" layoutX="312.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre1FromMovie1Time1" onMouseClicked="#goThreatre1FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="11:00" textFill="#ff0505" />
-        <Button fx:id="movie3threatre1time2" layoutX="368.0" layoutY="179.0" mnemonicParsing="false" onAction="#goThreatre1FromMovie1Time2" onMouseClicked="#goThreatre1FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="16:20" textFill="#f80a0a" />
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="301.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+        <Button fx:id="movie3threatre1time1" layoutX="306.0" layoutY="152.0" mnemonicParsing="false" onAction="#goThreatre1FromMovie1Time1" onMouseClicked="#goThreatre1FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="11:00" textFill="#ff0505" />
+        <Button fx:id="movie3threatre1time2" layoutX="365.0" layoutY="152.0" mnemonicParsing="false" onAction="#goThreatre1FromMovie1Time2" onMouseClicked="#goThreatre1FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="16:20" textFill="#f80a0a" />
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="298.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_3.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="462.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/4dx.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="388.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/1(50).jpg" />
             </image>
         </ImageView>
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="163.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2655.jpg" />
             </image>
         </ImageView>
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="424.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="159.0" layoutY="407.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2655.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="306.0" layoutY="252.0" text="Angel Has Fallen" textFill="#ebe7e7">
+        <Label layoutX="299.0" layoutY="232.0" text="Angel Has Fallen" textFill="#ebe7e7">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="306.0" layoutY="433.0" text="Angel Has Fallen" textFill="#ebe7e7">
+        <Label layoutX="302.0" layoutY="407.0" text="Angel Has Fallen" textFill="#ebe7e7">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="306.0" layoutY="297.0" text="ผ่ายุทธการ ดับแผนอหังการ์ แอ็คชัน , ชีวิต , ระทึกขวัญ  120 นาที" textFill="#fcfafa">
+        <Label layoutX="306.0" layoutY="267.0" text="ผ่ายุทธการ ดับแผนอหังการ์ แอ็คชัน , ชีวิต , ระทึกขวัญ  120 นาที" textFill="#fcfafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="302.0" layoutY="112.0" text="ผ่ายุทธการ ดับแผนอหังการ์ แอ็คชัน , ชีวิต , ระทึกขวัญ  120 นาที" textFill="#fcfafa">
+        <Label layoutX="299.0" layoutY="85.0" text="ผ่ายุทธการ ดับแผนอหังการ์ แอ็คชัน , ชีวิต , ระทึกขวัญ  120 นาที" textFill="#fcfafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="301.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="298.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_3.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/4dx.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/3(27).jpg" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="298.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="298.0" layoutY="462.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/rating_3.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="346.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/digital.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="507.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="37.0" layoutX="391.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/3(27).jpg" />
             </image>
         </ImageView>
-        <Button fx:id="movie3threatre2time1" layoutX="306.0" layoutY="361.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time1" onMouseClicked="#goThreatre2FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="14:00" textFill="#ff0505" />
-        <Button fx:id="movie3threatre3time1" layoutX="306.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time1" onMouseClicked="#goThreatre3FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="15:20" textFill="#ff0505" />
-        <Button fx:id="movie3threatre3time2" layoutX="368.0" layoutY="538.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time2" onMouseClicked="#goThreatre3FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="20:40" textFill="#f80a0a" />
-        <Button fx:id="movie3detailBtn" layoutX="616.0" layoutY="60.0" mnemonicParsing="false" onAction="#goMovieDetail1FromMovie3" onMouseClicked="#goMovieDetail1FromMovie3" style="-fx-background-color: red;" text="Detail" textFill="#fffbfb" />
-      <Button fx:id="movie3homeBtn" layoutX="429.0" layoutY="595.0" mnemonicParsing="false" onAction="#goHomeFromMovie1" style="-fx-background-color: red;" text="Home" textFill="#fffbfb" />
+        <Button fx:id="movie3threatre2time1" layoutX="306.0" layoutY="334.0" mnemonicParsing="false" onAction="#goThreatre2FromMovie2Time1" onMouseClicked="#goThreatre2FromMovie2Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="14:00" textFill="#ff0505" />
+        <Button fx:id="movie3threatre3time1" layoutX="306.0" layoutY="503.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time1" onMouseClicked="#goThreatre3FromMovie1Time1" style="-fx-background-color: gold; -fx-border-color: red;" text="15:20" textFill="#ff0505" />
+        <Button fx:id="movie3threatre3time2" layoutX="365.0" layoutY="503.0" mnemonicParsing="false" onAction="#goThreatre3FromMovie1Time2" onMouseClicked="#goThreatre3FromMovie1Time2" style="-fx-background-color: black; -fx-border-color: red;" text="20:40" textFill="#f80a0a" />
+        <Button fx:id="movie3detailBtn" layoutX="947.0" layoutY="59.0" mnemonicParsing="false" onAction="#goMovieDetail1FromMovie3" onMouseClicked="#goMovieDetail1FromMovie3" style="-fx-background-color: red; -fx-background-radius: 100;" text="Detail" textFill="#fffbfb" />
+      <Button fx:id="movie3homeBtn" layoutX="946.0" layoutY="516.0" mnemonicParsing="false" onAction="#goHomeFromMovie1" style="-fx-background-color: red; -fx-background-radius: 100;" text="Home" textFill="#fffbfb" />
+          <Line endX="954.0" layoutX="66.0" layoutY="224.0" startX="-100.0" stroke="#f50303" />
     </children>
 </Pane>
