--- a/src/cinema/moviedetail1.fxml
+++ b/src/cinema/moviedetail1.fxml
@@ -5,98 +5,100 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.media.MediaView?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail1Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail1Controller">
    <children>
-      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="418.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="857.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/gold-star-png.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="443.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="883.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/gold-star-png.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="468.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="909.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/gold-star-png.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="493.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="935.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/gold-star-png.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="518.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="961.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/gold-star-png.png" />
          </image>
       </ImageView>
-      <Line endX="499.0" layoutX="101.0" layoutY="92.0" startX="-100.0" stroke="#f50303" />
-      <ImageView fitHeight="481.0" fitWidth="538.0" layoutX="31.0" layoutY="-234.0" pickOnBounds="true" preserveRatio="true">
+      <Line endX="919.0" layoutX="101.0" layoutY="92.0" startX="-100.0" stroke="#f50303" />
+      <ImageView fitHeight="523.0" fitWidth="680.0" layoutX="147.0" layoutY="-315.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/nutflixlogo.png" />
          </image>
       </ImageView>
-      <Label layoutX="39.0" layoutY="33.0" text="It Chapter Two" textFill="#ee0909">
+      <Label layoutX="37.0" layoutY="18.0" text="It Chapter Two" textFill="#ee0909">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="39.0" layoutY="64.0" text="โผล่จากนรก 2" textFill="#fc0303">
+      <Label layoutX="37.0" layoutY="52.0" text="โผล่จากนรก 2" textFill="#fc0303">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <ImageView fitHeight="203.0" fitWidth="216.0" layoutX="226.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="203.0" fitWidth="216.0" layoutX="93.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/thumb_2596.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="25.0" layoutY="370.0" text="ผู้กำกับ :" textFill="#f80303">
+      <Label layoutX="29.0" layoutY="334.0" text="ผู้กำกับ :" textFill="#f80303">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-      <Label layoutX="25.0" layoutY="413.0" text="นักแสดง :" textFill="#f20808">
+      <Label layoutX="28.0" layoutY="363.0" text="นักแสดง :" textFill="#f20808">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
-      <Label layoutX="25.0" layoutY="448.0" text="ค่ายภาพยนตร์ :" textFill="#f80606">
+      <Label layoutX="28.0" layoutY="391.0" text="ค่ายภาพยนตร์ :" textFill="#f80606">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="gobackmoviedetail1" layoutX="5.0" layoutY="92.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail1" onMouseClicked="#goBackFromMovieDetail1" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
-      <Label layoutX="100.0" layoutY="372.0" text="แอนเดรส มัสเชียต" textFill="#f8f5f5">
+      <Button fx:id="gobackmoviedetail1" layoutX="17.0" layoutY="104.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail1" onMouseClicked="#goBackFromMovieDetail1" style="-fx-background-color: red; -fx-background-radius: 100;" text="Back" textFill="#fcf7f7" />
+      <Label layoutX="89.0" layoutY="334.0" text="แอนเดรส มัสเชียต" textFill="#f8f5f5">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="100.0" layoutY="415.0" text="เจสสิกา แชสเทน, เจมส์ แม็กอะวอย, บิลล์ สการ์สการ์ด" textFill="#fffafa">
+      <Label layoutX="91.0" layoutY="363.0" text="เจสสิกา แชสเทน, เจมส์ แม็กอะวอย, บิลล์ สการ์สการ์ด" textFill="#fffafa">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="136.0" layoutY="450.0" text="It Chapter Two/Warner Bros. Pictures" textFill="#fffafa">
+      <Label layoutX="130.0" layoutY="391.0" text="It Chapter Two/Warner Bros. Pictures" textFill="#fffafa">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="481.0" text="เรื่องย่อ" textFill="#ee0808">
+      <Label layoutX="25.0" layoutY="418.0" text="เรื่องย่อ" textFill="#ee0808">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="86.0" layoutY="483.0" text="เพราะตัวตลกปีศาจเพนนี่ไวซ์จะกลับมาเยือนเมืองเดอร์รี่ รัฐเมนในทุก ๆ 27 ปี " textFill="#f2ecec" />
-      <Label layoutX="25.0" layoutY="501.0" text=" &quot;It: Chapter Two - อิท โผล่จากนรก 2&quot; จึงพาเหล่าตัวละครที่แยกย้ายจากกันไปนานกลับมารวมตัวกันอีกครั้ง" textFill="#f2eeee" />
-      <Label layoutX="25.0" layoutY="524.0" text="ในวัยผู้ใหญ่ ซึ่งนับเป็นเวลากว่า 3 ศตวรรษหลังจากเหตุการณ์สยองเกิดขึ้นกับพวกเขาตอนเด็กในภาพยนตร์ภาคแรก" textFill="#fcf6f6" />
-      <Label layoutX="30.0" layoutY="548.0" text="สานต่อความสำเร็จจาก IT เมื่อปี 2017 โดยฝีมือกำกับของ แอนดี้ มุสชีเอตติ ผู้พาภาพยนตร์กวาดรายได้ทั่วโลกสูง" textFill="#f8f5f5" />
-      <Label layoutX="25.0" layoutY="573.0" text="ได้ตัวนักแสดงมากฝีมือมากมายมารับบทเป็น &quot;กลุ่มขี้แพ้&quot; ในวัยผู้ใหญ่ " textFill="#f5efef" />
-      <Label layoutX="25.0" layoutY="596.0" text="นำโดยผู้เข้าชิงรางวัลออสการ์ เจสสิก้า แชสเทน (ภาพยนตร์ Zero Dark Thirty, Mama) รับบท เบเวอร์ลี่, เจมส์ แม็คอะวอย  " textFill="#f8f3f3" />
-      <Label layoutX="28.0" layoutY="620.0" text=" รวมถึงนักแสดงตัวหลักที่ขาดไม่ได้เลยก็คือ บิล ซาร์สการ์ด ที่กลับมาทวงตำแหน่งตัวตลกปีศาจในตำนาน เพนนี่ไวซ์" textFill="#eeecec" />
-      <Button fx:id="gohomemoviedetail1" layoutX="552.0" layoutY="92.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red;" text="Home" textFill="#fcf7f7" />
+      <Label layoutX="76.0" layoutY="420.0" text="เพราะตัวตลกปีศาจเพนนี่ไวซ์จะกลับมาเยือนเมืองเดอร์รี่ รัฐเมนในทุก ๆ 27 ปี " textFill="#f2ecec" />
+      <Label layoutX="17.0" layoutY="438.0" text=" &quot;It: Chapter Two - อิท โผล่จากนรก 2&quot; จึงพาเหล่าตัวละครที่แยกย้ายจากกันไปนานกลับมารวมตัวกันอีกครั้ง" textFill="#f2eeee" />
+      <Label layoutX="20.0" layoutY="455.0" text="ในวัยผู้ใหญ่ ซึ่งนับเป็นเวลากว่า 3 ศตวรรษหลังจากเหตุการณ์สยองเกิดขึ้นกับพวกเขาตอนเด็กในภาพยนตร์ภาคแรก" textFill="#fcf6f6" />
+      <Label layoutX="25.0" layoutY="472.0" text="สานต่อความสำเร็จจาก IT เมื่อปี 2017 โดยฝีมือกำกับของ แอนดี้ มุสชีเอตติ ผู้พาภาพยนตร์กวาดรายได้ทั่วโลกสูง" textFill="#f8f5f5" />
+      <Label layoutX="17.0" layoutY="489.0" text="ได้ตัวนักแสดงมากฝีมือมากมายมารับบทเป็น &quot;กลุ่มขี้แพ้&quot; ในวัยผู้ใหญ่ " textFill="#f5efef" />
+      <Label layoutX="20.0" layoutY="506.0" text="นำโดยผู้เข้าชิงรางวัลออสการ์ เจสสิก้า แชสเทน (ภาพยนตร์ Zero Dark Thirty, Mama) รับบท เบเวอร์ลี่, เจมส์ แม็คอะวอย  " textFill="#f8f3f3" />
+      <Label layoutX="23.0" layoutY="523.0" text=" รวมถึงนักแสดงตัวหลักที่ขาดไม่ได้เลยก็คือ บิล ซาร์สการ์ด ที่กลับมาทวงตำแหน่งตัวตลกปีศาจในตำนาน เพนนี่ไวซ์" textFill="#eeecec" />
+      <Button fx:id="gohomemoviedetail1" layoutX="949.0" layoutY="104.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red; -fx-background-radius: 100;" text="Home" textFill="#fcf7f7" />
+      <MediaView fx:id="media1" fitHeight="300.0" fitWidth="450.0" layoutX="500.0" layoutY="129.0" />
    </children>
 </Pane>
