--- a/src/cinema/moviedetail2.fxml
+++ b/src/cinema/moviedetail2.fxml
@@ -5,98 +5,100 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.media.MediaView?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail2Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail2Controller">
     <children>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="418.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="858.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="443.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="884.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="468.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="910.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="493.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="936.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="518.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="962.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <Line endX="499.0" layoutX="101.0" layoutY="92.0" startX="-100.0" stroke="#f50303" />
-        <ImageView fitHeight="481.0" fitWidth="538.0" layoutX="31.0" layoutY="-234.0" pickOnBounds="true" preserveRatio="true">
+        <Line endX="919.0" layoutX="101.0" layoutY="92.0" startX="-100.0" stroke="#f50303" />
+        <ImageView fitHeight="500.0" fitWidth="727.0" layoutX="190.0" layoutY="-314.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/nutflixlogo.png" />
             </image>
         </ImageView>
-        <Label layoutX="39.0" layoutY="33.0" text="Weathering with You" textFill="#ee0909">
+        <Label layoutX="39.0" layoutY="18.0" text="Weathering with You" textFill="#ee0909">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
         </Label>
-        <Label layoutX="39.0" layoutY="64.0" text="ฤดูฝัน ฉันมีเธอ" textFill="#fc0303">
+        <Label layoutX="43.0" layoutY="52.0" text="ฤดูฝัน ฉันมีเธอ" textFill="#fc0303">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <ImageView fitHeight="203.0" fitWidth="216.0" layoutX="226.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="203.0" fitWidth="216.0" layoutX="102.0" layoutY="108.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2720.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="25.0" layoutY="370.0" text="ผู้กำกับ :" textFill="#f80303">
+        <Label layoutX="29.0" layoutY="319.0" text="ผู้กำกับ :" textFill="#f80303">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <Label layoutX="25.0" layoutY="413.0" text="นักแสดง :" textFill="#f20808">
+        <Label layoutX="25.0" layoutY="339.0" text="นักแสดง :" textFill="#f20808">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <Label layoutX="25.0" layoutY="448.0" text="ค่ายภาพยนตร์ :" textFill="#f80606">
+        <Label layoutX="20.0" layoutY="359.0" text="ค่ายภาพยนตร์ :" textFill="#f80606">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Button fx:id="moviedetail2BackBtn" layoutX="5.0" layoutY="92.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail2" onMouseClicked="#goBackFromMovieDetail2" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
-        <Label layoutX="100.0" layoutY="372.0" text="มาโกโตะ ชิงไก" textFill="#f8f5f5">
+        <Button fx:id="moviedetail2BackBtn" layoutX="19.0" layoutY="108.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail2" onMouseClicked="#goBackFromMovieDetail2" style="-fx-background-color: red; -fx-background-radius: 100;" text="Back" textFill="#fcf7f7" />
+        <Label layoutX="99.0" layoutY="319.0" text="มาโกโตะ ชิงไก" textFill="#f8f5f5">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="100.0" layoutY="415.0" text="ไดโกะ โคทาโร่, โมริ นานะ, ยูกิ คาจิ" textFill="#fffafa">
+        <Label layoutX="99.0" layoutY="339.0" text="ไดโกะ โคทาโร่, โมริ นานะ, ยูกิ คาจิ" textFill="#fffafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="136.0" layoutY="450.0" text="Weathering with You/M Pictures" textFill="#fffafa">
+        <Label layoutX="118.0" layoutY="359.0" text="Weathering with You/M Pictures" textFill="#fffafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="25.0" layoutY="481.0" text="เรื่องย่อ" textFill="#ee0808">
+        <Label layoutX="22.0" layoutY="379.0" text="เรื่องย่อ" textFill="#ee0808">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="86.0" layoutY="483.0" text="จากผู้ให้กำเนิด “Your Name” ที่ครองหัวใจของคนทั้งโลก 'มาโกโตะ ชินไค' " textFill="#f2ecec" />
-        <Label layoutX="25.0" layoutY="501.0" text="พร้อมกับเพลงประกอบจากวง J-Rock เจ้าเก่า RADWIMPS สู่ผลงานล่าสุดที่จะทำให้หัวใจของคุณชุ่มฉ่ำอีกครั้งใน ฤดูฝัน ฉันมีเธอ”" textFill="#f2eeee" />
-        <Label layoutX="25.0" layoutY="524.0" text="เมื่อเด็กหนุ่มมัธยมปลายจากเมืองเล็ก ๆ ในชนบท โฮดากะ โมริชิมะ (โคทาโร่ ไดโกะ) " textFill="#fcf6f6" />
-        <Label layoutX="30.0" layoutY="548.0" text=" ได้ตัดสินใจออกเดินทางไปใช้ชีวิตในเมืองโตเกียวเพียงลำพัง เขาก็ได้พบกับความผิดปกติบางอย่างในเมืองแห่งนี้ " textFill="#f8f5f5" />
-        <Label layoutX="25.0" layoutY="573.0" text="เนื่องด้วยเพราะการทำงานเป็นนักเขียนในนิตยสารรวมสิ่งลึกลับ มันจึงทำให้เขาเริ่มสังเกตเห็นถึงสิ่งหนึ่งที่เกิดขึ้นบ่อยจนคนในเมือง" textFill="#f5efef" />
-        <Label layoutX="25.0" layoutY="596.0" text="คิดว่ามันเป็นเรื่องปกติ และนั่นก็เป็นจุดเริ่มต้นที่ทำให้เขาได้พบกับ ฮินะ อามาโนะ" textFill="#f8f3f3" />
-        <Label layoutX="28.0" layoutY="620.0" text="สาวน้อยปริศนาที่มีความสามารถในการควบคุมสภาพอากาศ และความลับที่จะเปลี่ยนโฉมหน้าของโลกใบนี้ไปตลอดกาล" textFill="#eeecec" />
-      <Button fx:id="moviedetail2HomeBtn" layoutX="549.0" layoutY="92.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red;" text="Home" textFill="#fcf7f7" />
+        <Label layoutX="78.0" layoutY="381.0" text="จากผู้ให้กำเนิด “Your Name” ที่ครองหัวใจของคนทั้งโลก 'มาโกโตะ ชินไค' " textFill="#f2ecec" />
+        <Label layoutX="25.0" layoutY="399.0" text="พร้อมกับเพลงประกอบจากวง J-Rock เจ้าเก่า RADWIMPS สู่ผลงานล่าสุดที่จะทำให้หัวใจของคุณชุ่มฉ่ำอีกครั้งใน ฤดูฝัน ฉันมีเธอ”" textFill="#f2eeee" />
+        <Label layoutX="22.0" layoutY="416.0" text="เมื่อเด็กหนุ่มมัธยมปลายจากเมืองเล็ก ๆ ในชนบท โฮดากะ โมริชิมะ (โคทาโร่ ไดโกะ) " textFill="#fcf6f6" />
+        <Label layoutX="22.0" layoutY="433.0" text=" ได้ตัดสินใจออกเดินทางไปใช้ชีวิตในเมืองโตเกียวเพียงลำพัง เขาก็ได้พบกับความผิดปกติบางอย่างในเมืองแห่งนี้ " textFill="#f8f5f5" />
+        <Label layoutX="22.0" layoutY="450.0" text="เนื่องด้วยเพราะการทำงานเป็นนักเขียนในนิตยสารรวมสิ่งลึกลับ มันจึงทำให้เขาเริ่มสังเกตเห็นถึงสิ่งหนึ่งที่เกิดขึ้นบ่อยจนคนในเมือง" textFill="#f5efef" />
+        <Label layoutX="25.0" layoutY="467.0" text="คิดว่ามันเป็นเรื่องปกติ และนั่นก็เป็นจุดเริ่มต้นที่ทำให้เขาได้พบกับ ฮินะ อามาโนะ" textFill="#f8f3f3" />
+        <Label layoutX="22.0" layoutY="484.0" text="สาวน้อยปริศนาที่มีความสามารถในการควบคุมสภาพอากาศ และความลับที่จะเปลี่ยนโฉมหน้าของโลกใบนี้ไปตลอดกาล" textFill="#eeecec" />
+      <Button fx:id="moviedetail2HomeBtn" layoutX="950.0" layoutY="120.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red; -fx-background-radius: 100;" text="Home" textFill="#fcf7f7" />
+      <MediaView fx:id="media" fitHeight="300.0" fitWidth="450.0" layoutX="502.0" layoutY="121.0" />
     </children>
 </Pane>
