--- a/src/cinema/moviedetail3.fxml
+++ b/src/cinema/moviedetail3.fxml
@@ -5,81 +5,83 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.media.MediaView?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail3Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.MovieDetail3Controller">
     <children>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="418.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="927.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="443.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="21.0" fitWidth="29.0" layoutX="951.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/gold-star-png.png" />
             </image>
         </ImageView>
-        <Line endX="499.0" layoutX="101.0" layoutY="92.0" startX="-100.0" stroke="#f50303" />
-        <ImageView fitHeight="481.0" fitWidth="538.0" layoutX="31.0" layoutY="-234.0" pickOnBounds="true" preserveRatio="true">
+        <Line endX="919.0" endY="1.52587890625E-5" layoutX="101.0" layoutY="92.0" startX="-100.0" stroke="#f50303" />
+        <ImageView fitHeight="556.0" fitWidth="656.0" layoutX="199.0" layoutY="-301.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/nutflixlogo.png" />
             </image>
         </ImageView>
-        <Label layoutX="39.0" layoutY="33.0" text="Angel Has Fallen" textFill="#ee0909">
+        <Label layoutX="30.0" layoutY="27.0" text="Angel Has Fallen" textFill="#ee0909">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
         </Label>
-        <Label layoutX="39.0" layoutY="64.0" text="ผ่ายุทธการ ดับแผนอหังการ์" textFill="#fc0303">
+        <Label layoutX="29.0" layoutY="54.0" text="ผ่ายุทธการ ดับแผนอหังการ์" textFill="#fc0303">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <ImageView fitHeight="203.0" fitWidth="216.0" layoutX="226.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="203.0" fitWidth="216.0" layoutX="136.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/thumb_2655.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="25.0" layoutY="370.0" text="ผู้กำกับ :" textFill="#f80303">
+        <Label layoutX="29.0" layoutY="318.0" text="ผู้กำกับ :" textFill="#f80303">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <Label layoutX="25.0" layoutY="413.0" text="นักแสดง :" textFill="#f20808">
+        <Label layoutX="30.0" layoutY="338.0" text="นักแสดง :" textFill="#f20808">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></Label>
-        <Label layoutX="25.0" layoutY="448.0" text="ค่ายภาพยนตร์ :" textFill="#f80606">
+        <Label layoutX="23.0" layoutY="358.0" text="ค่ายภาพยนตร์ :" textFill="#f80606">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Button fx:id="movie3BackBtn" layoutX="5.0" layoutY="92.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail3" onMouseClicked="#goBackFromMovieDetail3" style="-fx-background-color: red;" text="Back" textFill="#fcf7f7" />
-        <Label layoutX="100.0" layoutY="372.0" text="ริค โรมัน วาฟ" textFill="#f8f5f5">
+        <Button fx:id="movie3BackBtn" layoutX="30.0" layoutY="120.0" mnemonicParsing="false" onAction="#goBackFromMovieDetail3" onMouseClicked="#goBackFromMovieDetail3" style="-fx-background-color: red; -fx-background-radius: 100;" text="Back" textFill="#fcf7f7" />
+        <Label layoutX="93.0" layoutY="318.0" text="ริค โรมัน วาฟ" textFill="#f8f5f5">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="100.0" layoutY="415.0" text="เจอราร์ด บัตเลอร์, มอร์แกน ฟรีแมน, ไพเพอร์ เพอราโบ" textFill="#fffafa">
+        <Label layoutX="93.0" layoutY="338.0" text="เจอราร์ด บัตเลอร์, มอร์แกน ฟรีแมน, ไพเพอร์ เพอราโบ" textFill="#fffafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="136.0" layoutY="450.0" text="Angel Has Fallen/M Pictures" textFill="#fffafa">
+        <Label layoutX="121.0" layoutY="358.0" text="Angel Has Fallen/M Pictures" textFill="#fffafa">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="25.0" layoutY="481.0" text="เรื่องย่อ" textFill="#ee0808">
+        <Label layoutX="29.0" layoutY="378.0" text="เรื่องย่อ" textFill="#ee0808">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="86.0" layoutY="483.0" text="เมื่อเจ้าหน้าที่หน่วยสืบราชการลับ ไมค์ แบนนิ่ง (เจอราร์ด บัตเลอร์) และประธานาธิบดี อัลลัน ทรัมบูล  " textFill="#f2ecec" />
-        <Label layoutX="25.0" layoutY="501.0" text="ถูกโจมตีจากกลุ่มก่อการร้ายแม้รอดชีวิตมาได้ แต่กลับกลายเป็นว่า ไมค์ แบนนิ่ง" textFill="#f2eeee" />
-        <Label layoutX="25.0" layoutY="524.0" text="ถูกตั้งข้อหาพยายามสังหารประธานาธิบดีเสียเอง" textFill="#fcf6f6" />
-        <Label layoutX="30.0" layoutY="548.0" text="ขาจึงหลบหนีจากการไล่ล่าของเจ้าหน้าที่พร้อมกับต้องตามล่าตัวการเพื่อล้างมลทินและ" textFill="#f8f5f5" />
-        <Label layoutX="25.0" layoutY="573.0" text="ปกป้องประธานาธิบดีที่กำลังตกอยู่ในอันตรายจากทั้งฝ่ายรัฐบาลและผู้ก่อการร้ายระดับพระกาฬอีกครั้ง" textFill="#f5efef" />
-      <Button fx:id="moviedetail3HomeBtn" layoutX="543.0" layoutY="92.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red;" text="Home" textFill="#f2eeee" />
+        <Label layoutX="80.0" layoutY="380.0" text="เมื่อเจ้าหน้าที่หน่วยสืบราชการลับ ไมค์ แบนนิ่ง (เจอราร์ด บัตเลอร์) และประธานาธิบดี อัลลัน ทรัมบูล  " textFill="#f2ecec" />
+        <Label layoutX="23.0" layoutY="398.0" text="ถูกโจมตีจากกลุ่มก่อการร้ายแม้รอดชีวิตมาได้ แต่กลับกลายเป็นว่า ไมค์ แบนนิ่ง" textFill="#f2eeee" />
+        <Label layoutX="24.0" layoutY="415.0" text="ถูกตั้งข้อหาพยายามสังหารประธานาธิบดีเสียเอง" textFill="#fcf6f6" />
+        <Label layoutX="21.0" layoutY="432.0" text="เขาจึงหลบหนีจากการไล่ล่าของเจ้าหน้าที่พร้อมกับต้องตามล่าตัวการเพื่อล้างมลทินและ" textFill="#f8f5f5" />
+        <Label layoutX="21.0" layoutY="449.0" text="ปกป้องประธานาธิบดีที่กำลังตกอยู่ในอันตรายจากทั้งฝ่ายรัฐบาลและผู้ก่อการร้ายระดับพระกาฬอีกครั้ง" textFill="#f5efef" />
+      <Button fx:id="moviedetail3HomeBtn" layoutX="940.0" layoutY="107.0" mnemonicParsing="false" onAction="#goHomeFromMovieDetail1" onMouseClicked="#goHomeFromMovieDetail1" style="-fx-background-color: red; -fx-background-radius: 100;" text="Home" textFill="#f2eeee" />
+      <MediaView fx:id="media" fitHeight="300.0" fitWidth="450.0" layoutX="489.0" layoutY="120.0" />
     </children>
 </Pane>
